<resources>
    <string name="app_name">Capitales</string>
    <string name="whatIsText">Quelle est la capitale de :</string>
    <string name="pays1Text">PAYS 1</string>
    <string name="pays2Text">PAYS 2</string>
    <string name="pays3Text">PAYS 3</string>
    <string name="pays4Text">PAYS 4</string>
    <string name="pays5Text">PAYS 5</string>
    <string name="capText">Sa capitale est...</string>
    <string name="scoreText">Bonnes réponses = </string>
    <string name="modText">Mode TEXTE</string>
    <string name="modClic">Mode CLIC</string>
    <string name="tvExplain">Le jeu \"CAPITALES\" est un jeu dans lequel on doit trouver le nom de la capitale d\'un pays donné.</string>
    <string name="tvChoose">Choisissez de cliquer sur le bon nom parmi plusieurs, ou de taper les noms au clavier (plus difficile).</string>
    <string name="check">CHECK</string>
    <string name="back">BACK</string>
    <string name="start">START</string>

</resources>
