<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivTitle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/capitale_titre4" />

        <TextView
            android:id="@+id/tvWhatis"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/whatIsText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPays1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/pays1Text" />

        <EditText
            android:id="@+id/etCapit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capText"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPays2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/pays2Text" />

        <EditText
            android:id="@+id/etCapit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capText"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPays3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/pays3Text" />

        <EditText
            android:id="@+id/etCapit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capText"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPays4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/pays4Text" />

        <EditText
            android:id="@+id/etCapit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capText"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPays5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/pays5Text" />

        <EditText
            android:id="@+id/etCapit5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capText"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />

        <Button
            android:id="@+id/butCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check" />
        <Button
            android:id="@+id/butBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

    </LinearLayout>

</LinearLayout>