<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond">


    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/capitale_titre4" />


    <TextView
        android:id="@+id/tvWhatis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/whatIsText"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnPays1"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvWhatis"
        android:layout_marginTop="10dp"
        android:text="@string/pays1Text" />

    <EditText
        android:id="@+id/etCapit1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvWhatis"
        android:layout_alignBaseline="@id/btnPays1"
        android:hint="@string/capText"
        android:maxLength="20"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnPays2"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/btnPays1"
        android:text="@string/pays2Text" />

    <EditText
        android:id="@+id/etCapit2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/btnPays2"
        android:hint="@string/capText"
        android:maxLines="1"
        android:inputType="text"/>


    <Button
        android:id="@+id/btnPays3"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/btnPays2"
        android:text="@string/pays3Text" />

    <EditText
        android:id="@+id/etCapit3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/btnPays3"
        android:hint="@string/capText"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnPays4"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/btnPays3"
        android:text="@string/pays4Text" />

    <EditText
        android:id="@+id/etCapit4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/btnPays4"
        android:hint="@string/capText"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnPays5"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/btnPays4"
        android:text="@string/pays5Text" />

    <EditText
        android:id="@+id/etCapit5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/btnPays5"
        android:hint="@string/capText"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/butStart"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnPays5"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="START" />

    <Button
        android:id="@+id/butCheck"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnPays5"
        android:layout_toRightOf="@id/butStart"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:text="CHECK" />

</RelativeLayout>